# Adversarial_XSS

./: .env_template  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: config.py  main.py
app/controllers/: endpoint_controller.py
app/payload_validators/: dummy_detector.py
app/payload_validators/interfaces/: abstract_xss_detector.py  abstract_xss_sanitizer.py  payload_validator_interface.py
app/services/: payload_service.py
app/templates/: basic_response.html
notebooks/: analyze_papers.ipynb
output/: all.csv  all_v2.csv  filtered.csv  filtered_v2.csv  test.csv
output_code_generation/: all.csv  filtered.csv
src/: openai_code.py  scopus.py
