[tool.poetry]
name = "adversarial-xss"
version = "0.1.0"
description = ""
authors = ["PasiniSamuele <samu.pasini98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
jinja2 = "^3.1.2"
markupsafe = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
